April 20, 2020 - Quarantine Edition
----------------------------
- Hey friends! How are you spending the time at home? I'm trying to catch up on 4koma translations
- AND YOU CAN READ THEM HERE https://www.reddit.com/r/SIFallstars/wiki/event4koma
- Anyways here's what I'm doing while trying to figure out the joke of the next one:
- Ported from the SIFAS Calc: Made the Region select for the Automatic Timer a general region select
    - This will allow you to simulataneously change the automatic timer, event point tables and LP caps at once
- Added Yell Unit Bonus to Token Event
- Added the new Token Event reward tables from JP

February 6, 2020 - Watching A 3D Print Edition
----------------------------
- Hello again, everyone. I am currently watching a calibration print on my new 3D printer. It's fun.
- Anyways here's what I'm doing while watching it doing it's thing:
- Fixed numbers of large results not shrinking on page load
- Doubled result display animation speed

October 20, 2019 - Small Edition
----------------------------
- Fixed empty space below event banner on small screens

October 11, 2019 - Coming Back For More Edition
----------------------------
- Bringing some changes from the SIFAS Calc back to here:
- "Loveca Needed" was changed to "Refills Needed", Loveca Stone count moved to the Recovery Items dropdown
- Optimized stylesheet a little
- Removed non-favicon icons from the download list

October 4, 2019 - Long Overdue Edition
----------------------------
- Added multipliers to MedFes
- Calculator now throws an error if the live you've set costs more LP than you have
- Added Sleep Warning for low-LP gamers

October 3, 2019 - Colorblind Edition
----------------------------
- Oh hey, the tools page exists
- Fixed a whole bunch of color problems there

September 30, 2019 - I'm Just Killing Time Until SIFAS Event Edition
----------------------------
- Final rank result now shows amount of EXP in that rank. Maybe you're close to another rank up?
