@@ -203,7 +203,10 @@
                                 <label for="tokenEventLiveDifficultyHard">Hard</label>
                                 <input name="tokenEventLiveDifficulty" type="radio" id="tokenEventLiveDifficultyEx"
                                        value="EX"/>
-                                <label for="tokenEventLiveDifficultyEx">EX / M</label>
+                                <label for="tokenEventLiveDifficultyEx">EX</label>
+                                <input name="tokenEventLiveDifficulty" type="radio" id="tokenEventLiveDifficultyMaster"
+                                       value="MASTER"/>
+                                <label for="tokenEventLiveDifficultyMaster">MASTER</label>
                             </div>
                             <span class="form-label">Event Live Score Rank</span>
                             <div class="radio-row">
