@@ -1,11 +1,12 @@
-April 20, 2020 - Quarantine Edition
+April 20/21, 2020 - Quarantine Edition
 ----------------------------
-- Hey friends! How are you spending the time at home? I'm trying to catch up on 4koma translations
+- Hey friends! How are you spending the time at home? I'm trying to catch up on the SIFAS 4koma translations
 - AND YOU CAN READ THEM HERE https://www.reddit.com/r/SIFallstars/wiki/event4koma
 - Anyways here's what I'm doing while trying to figure out the joke of the next one:
 - Ported from the SIFAS Calc: Made the Region select for the Automatic Timer a general region select
     - This will allow you to simulataneously change the automatic timer, event point tables and LP caps at once
 - Added Yell Unit Bonus to Token Event
+- Added Master Difficulty to Token Event
 - Added the new Token Event reward tables from JP
 
 February 6, 2020 - Watching A 3D Print Edition
